--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -76,4 +76,24 @@ obj-$(CONFIG_ARIMA_GPS_ELNA) += gps_elna.o
 obj-$(CONFIG_MACH_SONY_FALCONSS) += postoffice.o
 obj-$(CONFIG_UID_CPUTIME) 	+= uid_cputime.o
 obj-$(CONFIG_BLX)		+= blx.o
-
+obj-$(CONFIG_HAPTIC_DRV2605)	+= drv2605.o
+obj-$(CONFIG_MOT_UTAG) += utag/
+obj-$(CONFIG_MMI_FACTORY) += mmi-factory.o
+obj-$(CONFIG_SEC_DRIVER) += sec/
+obj-$(CONFIG_C55_CTRL) += c55_ctrl.o
+obj-$(CONFIG_ALSA_TO_H2W) += alsa-to-h2w-headset.o
+obj-$(CONFIG_HOB_SHARED_RAM) += hob_ram_mmap.o
+obj-$(CONFIG_DROPBOX) += dropbox.o
+obj-$(CONFIG_SENSORS_AK8963)	+= akm8963.o
+obj-$(CONFIG_USR_RESET_WARNING) += usr-reset-warning.o
+obj-$(CONFIG_SENSORS_LIS3DH_MOT)    += lis3dh_mot.o
+obj-$(CONFIG_SENSORS_L3G4200D) += l3g4200d.o
+obj-$(CONFIG_CYPRESS_CAPSENSE_PROGRAMMING)	+= capsense_prog/
+obj-$(CONFIG_SENSORS_STM401) += stm401/
+obj-$(CONFIG_SENSORS_BMA2X2) += bstclass.o
+obj-$(CONFIG_SENSORS_BMA2X2) += bma2x2.o
+obj-$(CONFIG_SENSORS_BMG) += bmg160_driver.o bmg160.o
+obj-$(CONFIG_SENSORS_BMM050) += bmm050_driver.o bmm050.o
+obj-$(CONFIG_SENSORS_STML0XX) += stml0xx/
+obj-$(CONFIG_UID_CPUTIME) += uid_cputime.o
+obj-$(CONFIG_HPH_HIGH_PERF) += sound_control.o
