--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -683,6 +683,12 @@ config ARIMA_GPS_ELNA
 	  To compile this driver as a module, choose m here. The module will
 	  be called gps_elna.
 
+config BLX
+       bool "Support for Battery Life eXtender"
+       default y
+        help
+         Say Y here to enable Battery Life eXtender
+         
 source "drivers/misc/c2port/Kconfig"
 source "drivers/misc/eeprom/Kconfig"
 source "drivers/misc/cb710/Kconfig"
