--- a/arch/arm/boot/dts/msm-pm8110-falconss.dtsi
+++ b/arch/arm/boot/dts/msm-pm8110-falconss.dtsi
@@ -57,14 +57,14 @@
 			#size-cells = <1>;
 			status = "ok";
 
-			qcom,vddmax-mv = <4220>;
-			qcom,vddsafe-mv = <4220>;
-			qcom,vinmin-mv = <4220>;
-			qcom,vbatdet-mv = <4110>;
-			qcom,ibatmax-ma = <1300>;
+			qcom,vddmax-mv = <4300>;
+			qcom,vddsafe-mv = <4250>;
+			qcom,vinmin-mv = <4250>;
+			qcom,vbatdet-mv = <4100>;
+			qcom,ibatmax-ma = <2000>;
 			qcom,ibatterm-ma = <100>;
-			qcom,ibatsafe-ma = <1300>;
-			qcom,thermal-mitigation = <1500 700 600 325>;
+			qcom,ibatsafe-ma = <2000>;
+			qcom,thermal-mitigation = <2000 1500 1300 500>;
 			qcom,vbatdet-delta-mv = <100>;
 			qcom,resume-soc = <100>;
 			qcom,tchg-mins = <150>;
@@ -72,6 +72,8 @@
 			qcom,chg-adc_tm = <&pm8110_adc_tm>;
 			qcom,tchg-mins-usb = <480>;
 			qcom,tchg-mins-wall = <240>;
+			qcom,cycle-counter-en;
+			qcom,capacity-learning-on;
 
 			qcom,chgr@1000 {
 				status = "ok";
@@ -328,12 +330,12 @@
 
 			qcom,r-sense-uohm = <10000>;
 			qcom,v-cutoff-uv = <325000>;
-			qcom,max-voltage-uv = <4220000>;
+			qcom,max-voltage-uv = <4300000>;
 			qcom,r-conn-mohm = <0>;
 			qcom,shutdown-soc-valid-limit = <20>;
 			qcom,adjust-soc-low-threshold = <15>;
-			qcom,ocv-voltage-high-threshold-uv = <3750000>;
-			qcom,ocv-voltage-low-threshold-uv = <3650000>;
+			qcom,ocv-voltage-high-threshold-uv = <3800000>;
+			qcom,ocv-voltage-low-threshold-uv = <3600000>;
 			qcom,low-soc-calculate-soc-threshold = <15>;
 			qcom,low-voltage-calculate-soc-ms = <1000>;
 			qcom,low-soc-calculate-soc-ms = <5000>;
