--- a/arch/arm/configs/stock_falconss_defconfig
+++ b/arch/arm/configs/stock_falconss_defconfig
@@ -1806,6 +1806,7 @@ CONFIG_QPNP_CHARGER=y
 CONFIG_BATTERY_BCL=y
 # CONFIG_CHARGER_SMB347 is not set
 CONFIG_QPNP_BMS=y
+CONFIG_QNS_SYSTEM=y
 CONFIG_HWMON=y
 # CONFIG_HWMON_VID is not set
 # CONFIG_HWMON_DEBUG_CHIP is not set
