--- a/arch/arm/boot/dts/msm-pm8110-falconss.dtsi
+++ b/arch/arm/boot/dts/msm-pm8110-falconss.dtsi
@@ -326,7 +326,7 @@
 			compatible = "qcom,qpnp-bms";
 			#address-cells = <1>;
 			#size-cells = <1>;
-			status = "disabled";
+			status = "ok";
 
 			qcom,r-sense-uohm = <10000>;
 			qcom,v-cutoff-uv = <325000>;
