--- a/arch/arm/configs/stock_falconss_defconfig
+++ b/arch/arm/configs/stock_falconss_defconfig
@@ -1914,7 +1914,7 @@ CONFIG_THERMAL_HWMON=y
 # CONFIG_THERMAL_TSENS is not set
 # CONFIG_THERMAL_TSENS8960 is not set
 CONFIG_THERMAL_TSENS8974=y
-CONFIG_THERMAL_MONITOR=y
+# CONFIG_THERMAL_MONITOR=y
 CONFIG_THERMAL_QPNP=y
 CONFIG_THERMAL_QPNP_ADC_TM=y
 # CONFIG_WATCHDOG is not set
@@ -3402,3 +3402,6 @@ CONFIG_SNAPPY_COMPRESS=y
 CONFIG_SNAPPY_DECOMPRESS=y
 CONFIG_DYNAMIC_FSYNC=y
 CONFIG_BLX=y
+CONFIG_CPU_VOLTAGE_TABLE=y
+CONFIG_INTELLI_THERMAL_V2=y
+CONFIG_KERNEL_MODE_NEON=y
