Include all changes for extreme performance, high quality audio and superior battery charging

--- a/arch/arm/boot/dts/msm-pm8110-falconss.dtsi
+++ b/arch/arm/boot/dts/msm-pm8110-falconss.dtsi
@@ -57,14 +57,21 @@
 			#size-cells = <1>;
 			status = "ok";
 
-			qcom,vddmax-mv = <4300>;
-			qcom,vddsafe-mv = <4300>;
-			qcom,vinmin-mv = <4300>;
-			qcom,vbatdet-mv = <4100>;
-			qcom,ibatmax-ma = <2000>;
+			qcom,maxinput-usb-ma = <2100>;
+			qcom,maxinput-dc-ma = <2100>;
+			qcom,duty-cycle-100p = <1>;
+			qcom,warm-bat-decidegc = <50>;
+			qcom,cool-bat-decidegc = <22>;
+			qcom,ibat-calibration-enabled = <1>;
+			qcom,vddmax-mv = <4350>;
+			qcom,vddsafe-mv = <4325>;
+			qcom,vinmin-mv = <4325>;
+			qcom,vbatdet-mv = <4200>;
+			qcom,vbatweak-mv = <3200>;
+			qcom,ibatmax-ma = <2100>;
 			qcom,ibatterm-ma = <100>;
-			qcom,ibatsafe-ma = <2000>;
-			qcom,thermal-mitigation = <2000 1500 1300 500>;
+			qcom,ibatsafe-ma = <2100>;
+			qcom,thermal-mitigation = <2100 1500 1300 500>;
 			qcom,vbatdet-delta-mv = <100>;
 			qcom,resume-soc = <100>;
 			qcom,tchg-mins = <150>;
@@ -330,17 +337,17 @@
 
 			qcom,r-sense-uohm = <10000>;
 			qcom,v-cutoff-uv = <320000>;
-			qcom,max-voltage-uv = <4300000>;
-			qcom,r-conn-mohm = <0>;
+			qcom,max-voltage-uv = <4350000>;
+			qcom,r-conn-mohm = <100>;
 			qcom,shutdown-soc-valid-limit = <20>;
 			qcom,adjust-soc-low-threshold = <15>;
-			qcom,ocv-voltage-high-threshold-uv = <3800000>;
-			qcom,ocv-voltage-low-threshold-uv = <3600000>;
+			qcom,ocv-voltage-high-threshold-uv = <3750000>;
+			qcom,ocv-voltage-low-threshold-uv = <3520000>;
 			qcom,low-soc-calculate-soc-threshold = <15>;
 			qcom,low-voltage-calculate-soc-ms = <1000>;
-			qcom,low-soc-calculate-soc-ms = <5000>;
-			qcom,calculate-soc-ms = <20000>;
-			qcom,chg-term-ua = <100000>;
+			qcom,low-soc-calculate-soc-ms = <1000>;
+			qcom,calculate-soc-ms = <1000>;
+			qcom,chg-term-ua = <350000>;
 			qcom,batt-type = <6>;
 			qcom,low-voltage-threshold = <3450000>;
 			qcom,tm-temp-margin = <5000>;
