--- a/arch/arm/configs/stock_falconss_defconfig
+++ b/arch/arm/configs/stock_falconss_defconfig
@@ -1806,7 +1806,6 @@ CONFIG_QPNP_CHARGER=y
 CONFIG_BATTERY_BCL=y
 # CONFIG_CHARGER_SMB347 is not set
 CONFIG_QPNP_BMS=y
-CONFIG_QNS_SYSTEM=y
 CONFIG_HWMON=y
 # CONFIG_HWMON_VID is not set
 # CONFIG_HWMON_DEBUG_CHIP is not set
@@ -3402,7 +3401,8 @@ CONFIG_SNAPPY_COMPRESS=y
 CONFIG_SNAPPY_DECOMPRESS=y
 CONFIG_DYNAMIC_FSYNC=y
 CONFIG_BLX=y
+CONFIG_QNS_SYSTEM=y
 CONFIG_INTELLI_THERMAL_V2=y
 CONFIG_KERNEL_MODE_NEON=y
 CONFIG_SIMPLE_GPU_ALGORITHM=y
-
+CONFIG_HPH_HIGH_PERF=y
