GPU optimize initial powerlevel / RAM more OC

--- a/arch/arm/boot/dts/msm8610-falconss.dtsi
+++ b/arch/arm/boot/dts/msm8610-falconss.dtsi
@@ -516,7 +516,8 @@
 			<  800 /* 100 MHz */ >,
 			< 1600 /* 200 MHz */ >,
 			< 2664 /* 333 MHz */ >,
-			< 3200 /* 400 MHz */ >;
+			< 3200 /* 400 MHz */ >,
+			< 3464 /* 433 MHz */ >;
 	};
 
 	qcom,msm-cpufreq@0 {
@@ -528,8 +529,8 @@
 			<  600000 1600 >,
 			<  787200 1600 >,
 			<  998400 2664 >,
-			< 1190400 2664 >,
-			< 1248000 3200 >;
+			< 1190400 3200 >,
+			< 1248000 3464 >;
 	};
 
 	spmi_bus: qcom,spmi@fc4c0000 {
