--- a/arch/arm/boot/dts/msm-pm8110-falconss.dtsi
+++ b/arch/arm/boot/dts/msm-pm8110-falconss.dtsi
@@ -63,12 +63,14 @@
 			qcom,warm-bat-decidegc = <50>;
 			qcom,cool-bat-decidegc = <22>;
 			qcom,ibat-calibration-enabled = <1>;
-			qcom,vddmax-mv = <4350>;
-			qcom,vddsafe-mv = <4325>;
-			qcom,vinmin-mv = <4325>;
+			qcom,vddmax-mv = <4225>;
+			qcom,vddsafe-mv = <4225>;
+			qcom,vinmin-mv = <4225>;
 			qcom,vbatdet-mv = <4100>;
-			qcom,vbatweak-mv = <3200>;
+			qcom,vbatweak-mv = <3400>;
 			qcom,ibatmax-ma = <2100>;
+			qcom,ibatmax-cool-ma = <2100>;
+			qcom,ibatmax-warm-ma = <550>;
 			qcom,ibatterm-ma = <100>;
 			qcom,ibatsafe-ma = <2100>;
 			qcom,thermal-mitigation = <2100 1500 1300 500>;
@@ -333,16 +335,16 @@
 			compatible = "qcom,qpnp-bms";
 			#address-cells = <1>;
 			#size-cells = <1>;
-			status = "ok";
+			status = "disabled";
 
 			qcom,r-sense-uohm = <10000>;
 			qcom,v-cutoff-uv = <320000>;
-			qcom,max-voltage-uv = <4350000>;
-			qcom,r-conn-mohm = <100>;
+			qcom,max-voltage-uv = <4225000>;
+			qcom,r-conn-mohm = <18>;
 			qcom,shutdown-soc-valid-limit = <20>;
 			qcom,adjust-soc-low-threshold = <15>;
-			qcom,ocv-voltage-high-threshold-uv = <3700000>;
-			qcom,ocv-voltage-low-threshold-uv = <3500000>;
+			qcom,ocv-voltage-high-threshold-uv = <3750000>;
+			qcom,ocv-voltage-low-threshold-uv = <3650000>;
 			qcom,low-soc-calculate-soc-threshold = <15>;
 			qcom,low-voltage-calculate-soc-ms = <1000>;
 			qcom,low-soc-calculate-soc-ms = <1000>;
@@ -352,7 +354,7 @@
 			qcom,low-voltage-threshold = <3450000>;
 			qcom,tm-temp-margin = <5000>;
 			qcom,low-ocv-correction-limit-uv = <100>;
-			qcom,high-ocv-correction-limit-uv = <250>;
+			qcom,high-ocv-correction-limit-uv = <50>;
 			qcom,hold-soc-est = <3>;
 			qcom,bms-vadc = <&pm8110_vadc>;
 			qcom,bms-iadc = <&pm8110_iadc>;
