--- a/arch/arm/boot/dts/msm-pm8110-falconss.dtsi
+++ b/arch/arm/boot/dts/msm-pm8110-falconss.dtsi
@@ -63,15 +63,15 @@
 			qcom,warm-bat-decidegc = <50>;
 			qcom,cool-bat-decidegc = <22>;
 			qcom,ibat-calibration-enabled = <1>;
-			qcom,vddmax-mv = <4320>;
-			qcom,vddsafe-mv = <4320>;
-			qcom,vinmin-mv = <4320>;
+			qcom,vddmax-mv = <4275>;
+			qcom,vddsafe-mv = <4275>;
+			qcom,vinmin-mv = <4275>;
 			qcom,vbatdet-mv = <4100>;
-			qcom,vbatweak-mv = <3400>;
+			qcom,vbatweak-mv = <3200>;
 			qcom,ibatmax-ma = <2100>;
 			qcom,ibatmax-cool-ma = <2100>;
 			qcom,ibatterm-ma = <100>;
-			qcom,ibatsafe-ma = <1800>;
+			qcom,ibatsafe-ma = <2100>;
 			qcom,thermal-mitigation = <2100 1500 1300 500>;
 			qcom,vbatdet-delta-mv = <60>;
 			qcom,resume-soc = <99>;
@@ -337,8 +337,8 @@
 			status = "disabled";
 
 			qcom,r-sense-uohm = <10000>;
-			qcom,v-cutoff-uv = <320000>;
-			qcom,max-voltage-uv = <4320000>;
+			qcom,v-cutoff-uv = <3100000>;
+			qcom,max-voltage-uv = <4275000>;
 			qcom,r-conn-mohm = <10>;
 			qcom,shutdown-soc-valid-limit = <20>;
 			qcom,adjust-soc-low-threshold = <15>;
@@ -348,13 +348,13 @@
 			qcom,low-voltage-calculate-soc-ms = <1000>;
 			qcom,low-soc-calculate-soc-ms = <1000>;
 			qcom,calculate-soc-ms = <1000>;
-			qcom,chg-term-ua = <350000>;
+			qcom,chg-term-ua = <250000>;
 			qcom,batt-type = <6>;
 			qcom,low-voltage-threshold = <3450000>;
 			qcom,tm-temp-margin = <5000>;
-			qcom,low-ocv-correction-limit-uv = <100>;
-			qcom,high-ocv-correction-limit-uv = <50>;
-			qcom,hold-soc-est = <3>;
+			qcom,low-ocv-correction-limit-uv = <500>;
+			qcom,high-ocv-correction-limit-uv = <100>;
+			qcom,hold-soc-est = <10>;
 			qcom,bms-vadc = <&pm8110_vadc>;
 			qcom,bms-iadc = <&pm8110_iadc>;
 			qcom,bms-adc_tm = <&pm8110_adc_tm>;
