--- a/arch/arm/boot/dts/msm-pm8110-falconss.dtsi
+++ b/arch/arm/boot/dts/msm-pm8110-falconss.dtsi
@@ -67,18 +67,18 @@
 			qcom,vinmin-mv = <4220>;
 			qcom,vbatdet-mv = <4110>;
 			qcom,vbatweak-mv = <3200>;
-			qcom,ibatmax-ma = <1300>;
-			qcom,ibatmax-cool-ma = <1300>;
+			qcom,ibatmax-ma = <750>;
+			qcom,ibatmax-cool-ma = <750>;
 			qcom,ibatterm-ma = <100>;
-			qcom,ibatsafe-ma = <1300>;
+			qcom,ibatsafe-ma = <750>;
 			qcom,thermal-mitigation = <1300 700 600 325>;
 			qcom,vbatdet-delta-mv = <100>;
 			qcom,resume-soc = <100>;
 			qcom,tchg-mins = <150>;
 			qcom,chg-vadc = <&pm8110_vadc>;
 			qcom,chg-adc_tm = <&pm8110_adc_tm>;
-			qcom,tchg-mins-usb = <750>;
-			qcom,tchg-mins-wall = <900>;
+			qcom,tchg-mins-usb = <60>;
+			qcom,tchg-mins-wall = <25>;
 			qcom,cycle-counter-en;
 			qcom,capacity-learning-on;
 
@@ -335,10 +335,11 @@
 			#size-cells = <1>;
 			status = "disabled";
 
-			qcom,r-sense-uohm = <10000>;
+			qcom,r-sense-uohm = <100000>;
+			qcom,batt-id-kohm = <100>;
 			qcom,v-cutoff-uv = <3100000>;
 			qcom,max-voltage-uv = <4220000>;
-			qcom,r-conn-mohm = <57>;
+			qcom,r-conn-mohm = <62>;
 			qcom,shutdown-soc-valid-limit = <20>;
 			qcom,adjust-soc-low-threshold = <15>;
 			qcom,ocv-voltage-high-threshold-uv = <3700000>;
